@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1321 2013/07/26 21:34:51 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1322 2013/07/28 09:21:49 mgorny Exp $
+
+  28 Jul 2013; Michał Górny <mgorny@gentoo.org> portage-2.1.11.62.ebuild,
+  portage-2.1.12.13.ebuild, portage-2.1.12.2.ebuild, portage-2.1.13.1.ebuild,
+  portage-2.2.0_alpha177.ebuild, portage-2.2.0_alpha188.ebuild,
+  portage-2.2.0_alpha190.ebuild, portage-9999.ebuild:
+  Use virtual/pypy for PyPy dep.
 
 *portage-2.2.0_alpha190 (26 Jul 2013)
 
